--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+html {
   scroll-behavior: smooth;
 }
 
@@ -16,6 +16,18 @@ a {
 button {
   border: none;
   background: none;
+}
+
+::-webkit-scrollbar {
+  width: 1vw;
+}
+
+::-webkit-scrollbar-track {
+  background-color: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: white;
 }
 
 .main-section {
@@ -32,8 +44,7 @@ button {
 .logo {
   position: absolute;
   top: 0;
-  font-size: 20px;
-  /* background-color: red; */
+  font-size: 18px;
   font-family: 'Montserrat';
   font-weight: 400;
   padding-top: 10px;
@@ -95,29 +106,6 @@ button {
   color: white;
 }
 
-/* .cursor-dot {
-  width: 5px;
-  height: 5px;
-  background-color: black;
-}
-
-.cursor-outline {
-  width: 30px;
-  height: 30px;
-  border: 2px solid grey;
-}
-
-.cursor-dot, .cursor-outline {
-  position: fixed;
-  top: 0;
-  left: 0;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  border-radius: 50%;
-  z-index: 1;
-}
- */
-
 .main-cursor {
   width: 40px;
   height: 40px;
@@ -147,4 +135,75 @@ button {
 
 .grow-mid {
   transform: scale(2.5);
+}
+
+.team-section {
+  width: 100%;
+  height: 100vh;
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat';
+  gap: 1em;
+}
+
+.team-container {
+  display: flex;
+  gap: 5em;
+  align-items: center;
+  padding: 35px 40px;
+  padding-bottom: 40px;
+}
+
+.team-member img {
+  width: 280px;
+  height: auto;
+  transition: all ease 0.5s;
+  box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.5);
+}
+  
+.team-member img:hover {
+  border-radius: 50%;
+}
+
+.team-section .head {
+  font-size: 40px;
+  font-weight: 400;
+  font-weight: 500;
+  border-bottom: solid 2px grey;
+  font-family: 'Forum';
+}
+
+.team-member:hover img {
+  transform: scale(1.105);
+}
+
+.team-member:hover .main-cursor{
+  transform: scale(1.2);
+}
+
+.info-container {
+  text-align: center;
+  font-family: 'Montserrat';
+  /* margin-top: 8em; */
+  /* background-color: red; */
+  height: 100px;
+}
+
+#info-text {
+  font-size: 50px;
+  text-transform: uppercase;
+  font-family: 'Forum';
+}
+
+#position-text {
+  font-size: 25px;
+  color: rgb(31, 0, 0);
+  font-family: 'Forum';
+}
+
+.grow-none {
+  display: none;
 }
