--- a/styles.css
+++ b/styles.css
@@ -187,8 +187,6 @@ button {
 .info-container {
   text-align: center;
   font-family: 'Montserrat';
-  /* margin-top: 8em; */
-  /* background-color: red; */
   height: 100px;
 }
 
@@ -205,5 +203,83 @@ button {
 }
 
 .grow-none {
-  display: none;
+  transform: scale(0.0);
+}
+
+.clients-section {
+  width: 100%;
+  height: 100vh;
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5em;
+}
+
+@keyframes slide {
+  from{
+    transform: translateX(0);
+  }
+  to{
+    transform: translateX(-100%);
+  }
+}
+
+.logos img{
+  width: 100px;
+  margin-left: 100px;
+}
+
+.logos {
+  overflow: hidden;
+  width: 80%;
+  white-space: nowrap;
+  padding: 60px 0;
+  background-color: aliceblue;
+  position: relative;
+}
+
+.logo-slider {
+  display: inline-block;
+  animation: slide 20s infinite linear;
+}
+
+.logos:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500px;
+  height: 100%;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), aliceblue);
+  z-index: 2;
+  content: "";
+}
+
+.logos:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), aliceblue);
+  z-index: 2;
+  content: "";
+}
+
+.clients-section p {
+  font-size: 40px;
+  font-weight: 400;
+  font-weight: 500;
+  border-bottom: solid 2px grey;
+  font-family: 'Forum';
+}
+
+.contact-section {
+  width: 100%;
+  height: 100vh;
+  background-color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
