--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ button {
 }
 
 .main-container span {
-  color: rgb(31, 0, 0);
+  color: rgb(0, 15, 27);
   font-family: 'Forum';
   font-size: 95px;
 }
@@ -170,7 +170,6 @@ button {
 
 .team-section .head {
   font-size: 40px;
-  font-weight: 400;
   font-weight: 500;
   border-bottom: solid 2px grey;
   font-family: 'Forum';
@@ -198,7 +197,7 @@ button {
 
 #position-text {
   font-size: 25px;
-  color: rgb(31, 0, 0);
+  color: rgb(0, 15, 27);
   font-family: 'Forum';
 }
 
@@ -277,9 +276,51 @@ button {
 
 .contact-section {
   width: 100%;
-  height: 100vh;
-  background-color: aliceblue;
+  padding: 2em 0;
+  background-color: rgb(0, 15, 27);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 3em;
+}
+
+.color-change {
+  border: 2px solid white;
+}
+
+.contact-section p {
+  color: white;
+  font-family: 'Forum';
+  font-size: 40px;
+  border-bottom: solid 2px rgb(163, 163, 163);
+}
+
+.contact-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.contact-details {
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
+
+.detail {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.detail i {
+  font-size: 35px;
+  color: white;
+}
+
+.detail p {
+  font-family: 'Montserrat';
+  font-size: 30px;
 }
